style.css
main {
  padding-top: 56px;
}

/* HEADER SECTION */

/* navbar section */

header.main-wrapper {
  position: fixed;
  width: 100%;
  z-index: 999;
}

header nav.nav-styling {
  background-color: #f72210;
  height: 50px;
}

.date {
  font-size: 16px;
  line-height: 34px;
  color: white;
  transform: scaleX(0.85);
}

.nav-styling a.navbar-brand {
  padding: 5px 0 5px 5px;
}

.nav-styling a.navbar-brand {
  width: 120px;
  height: auto;
  fill: white;
  margin-right: 0;
}

.nav-styling div.nav-right-wrapper {
  padding-left: 0;
  padding-right: 10px;
}

.nav-right-wrapper a {
  height: 26px;
  display: inline-block;
  font-size: 15px;
  font-weight: 900;
  padding-top: 6px;
  line-height: 14px;
}

.nav-right-wrapper .transparent {
  color: white;
  text-decoration-line: none;
  min-width: 55px;
  padding-right: 3px;
}

.nav-right-wrapper .white {
  background-color: white;
  color: #f72210;
  text-decoration-line: none;
  padding: 6px 3px;
}

.white div {
  display: inline-block;
}

.white svg {
  margin-left: 5px;
  fill: #f72210;
  height: 14px;
  padding-bottom: 2px;
}

.nav-right-wrapper button.bars-icon-button {
  border: none;
}

.nav-right-wrapper button.bars-icon-button:focus {
  outline: none;
}

button.bars-icon-button {
  padding: 4px 7px;
}

button.bars-icon-button .bars-icon {
  color: #fb9a94;
  font-size: 25px;
}

.navbar-collapse ul.navbar-nav {
  background-color: white;
  border-bottom: 1px solid rgb(121, 121, 121);
}

.navbar-collapse ul.navbar-nav li a {
  font-size: 21px;
  font-weight: 700;
  line-height: 24px;
  color: black;
  padding-left: 15px;
}

.search-bar {
  padding: 10px 15px;
}

.search-bar form input {
  border: none;
}

.search-bar form input:focus {
  outline: none;
}

/* MAIN SECTION */

main div.main-wrapper {
  max-width: 95%;
}

.img-container a img,
.culture-travel div a img,
.featured-stories div a img,
.survey div a img,
.sponsored div a img,
.latest-news div a img,
.magazine-section-top div a img,
.magazine-section-bottom div a img,
.editors-pick-section div a img,
.topics-section > div > div > a img,
.slideshow-section div a:first-child img {
  width: 100%;
}

/* top story, more stories, featured stories - title  */

.top-story > div,
.more-stories > div,
.featured-stories-title {
  color: rgba(3, 3, 3, 0.4);
  font-size: 16px;
  font-weight: 700;
  padding: 15px 0 5px;
}

/* top story */

.img-category {
  position: relative;
}

.img-category div:first-child {
  background-color: rgba(255, 255, 255, 0.9);
  position: absolute;
  bottom: 0;
  left: 0;
  color: #f72210;
  font-size: 17px;
  font-weight: 700;
  line-height: 16px;
  padding: 8px 15px 9px;
}

.top-story-title {
  padding: 10px 0 5px;
  font-size: 22px;
  font-weight: 700;
  line-height: 24px;
}

.top-story-title a {
  color: black;
}

.top-story-title a:hover {
  color: black;
  text-decoration-line: underline;
  text-decoration-color: #f72210;
}

.summary-text {
  color: #333;
  font-size: 13px;
  line-height: 18px;
}

/* more stories */ 

.more-stories article {
  border-top: 1px solid #ddd;
  padding: 15px 0;
  min-height: 110px;
}

.more-stories div a img {
  max-width: 135px;
  float: left;
  padding: 0 12px 12px 0;
}

.more-stories div a:hover {
  text-decoration-color: #f72210;
}

.more-stories div a h3 {
  font-size: 17px;
  font-weight: 700;
  color: black;
}

/* culture and travel */

.culture-travel > div {
  padding-top: 20px;
}

.culture-travel-title a {
  color: rgba(3, 3, 3, 0.5);
  font-size: 16px;
  font-weight: 700;
  padding: 10px 10px 0;
}

.culture-travel-title a:hover {
  color: rgba(3, 3, 3, 0.5);
  text-decoration-line: none;
}

.culture-travel div a h3 {
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-size: 20px;
  font-weight: 400;
  line-height: 22px;
  padding: 12px 10px 5px;
  color: rgb(39, 39, 39);
}

.culture-travel div a:hover {
  text-decoration-line: none;
}

.c-t-text {
  color: rgba(39, 39, 39, 0.5);
  font-size: 15px;
  font-weight: 400;
  line-height: 20px;
  padding: 0 10px 10px;
}

.c-t-category {
  background-color: #c2d4d7;
  color: #272727;
  padding: 3px 5px;
  margin-left: 10px;
  font-size: 13px;
  font-weight: 300;
  line-height: 20px;
}

.c-t-category:hover {
  background-color: #272727;
  color: #c2d4d7;
}

/* featured stories */

.featured-stories > div:nth-child(2) {
  padding-top: 0;
}

.featured-stories > div {
  padding-top: 20px;
}

.featured-stories div a h3 {
  color: black;
  font-size: 20px;
  font-weight: 700;
  line-height: 20px;
  padding: 10px 0;
  margin: 0;
}

.featured-stories div a {
  text-decoration-color: #f72210;
}

/* survey section */

.survey {
  text-align: center;
  margin: 40px 0;
}

.first-a-tag div {
  font-size: 18px;
  font-weight: 700;
  line-height: 22px;
  letter-spacing: 1px;
  color: #f72210;
}

.survey div .first-a-tag {
  text-decoration-line: none;
}

.survey a h3 {
  font-size: 20px;
  font-weight: 700;
  line-height: 20px;
  margin-top: 10px;
}

.survey div a {
  color: black;
  text-decoration-color: #f72210;
}

/* sponsored */

.sponsored > div {
  padding: 15px 0;
}

.sponsored-img-container {
  position: relative;
}

.sponsored-img-container div {
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: rgba(255, 255, 255, 0.9);
  color: #3581f4;
  font-size: 17px;
  line-height: 16px;
  font-weight: 700;
  padding: 10px;
}

.sponsored-text-container {
  border: 1px solid rgb(230, 230, 230);
  color: #333;
  padding: 20px;
}

.sponsored div.sponsored-text-container a {
  color: black;
  text-decoration-color: #f72210;
}

.sponsored-text-container a h3 {
  font-size: 20px;
  font-weight: 700;
  line-height: 20px;
}

/* opinion section */

.opinion > div {
  min-height: auto;
  padding: 10px 0;
  border-top: 1px solid #ddd;
}

.opinion div.first-opinion {
  border-top: none;
}

.opinion a.opinion-title {
  text-decoration-line: none;
}

.opinion-title div {
  color: rgba(3, 3, 3, 0.4);
  font-size: 16px;
  font-weight: 700;
  line-height: 16px;
  margin: 10px 0;
}
/* ... */

